resume fixed but not responsive

--- a/src/Componets/Resume/Resume.css
+++ b/src/Componets/Resume/Resume.css
@@ -174,7 +174,7 @@ width: 100%;
   .skill-parent span {
     font-family: "Poppins Bold";
     font-size: 16px;
-    color: #ff5823;
+    /* color: #ff5823; */
   }
   
   /* IPAD PRO RESPONSIVENESS */
